--- a/templates/userdata.template
+++ b/templates/userdata.template
@@ -28,15 +28,7 @@ packages:
   - eject
   - console-setup
   - keyboard-configuration
-  !!@packages@!!
-  # packages will have to be one of the below, depending on distro:
-  # Debian hyperv linux integration services https://poweradm.com/install-linux-integration-services-hyper-v/
-  # - hyperv-daemons
-  # Ubuntu azure kernel https://learn.microsoft.com/en-us/windows-server/virtualization/hyper-v/Supported-Ubuntu-virtual-machines-on-Hyper-V#notes
-  # - linux-tools-virtual
-  # - linux-cloud-tools-virtual
-  # - linux-azure
-
+!!@packages@!!
 
 # documented keyboard option, but not implemented ?
 # https://cloudinit.readthedocs.io/en/latest/topics/modules.html#keyboard
@@ -44,7 +36,6 @@ packages:
 # Do we need keyboard at all here?
 keyboard:
   layout: !!@KeyboardLayout@!!
-
 
 # https://learn.microsoft.com/en-us/azure/virtual-machines/linux/cloudinit-add-user#add-a-user-to-a-vm-with-cloud-init
 
@@ -86,11 +77,12 @@ runcmd:
   # set locale
   # cloud-init Bug 21.4.1: locale update prepends "LANG=" like in
   # /etc/defaults/locale set and results into error
-  - [ locale-gen, "$($Locale).UTF-8" ]
-  - [ update-locale, "$($Locale).UTF-8" ]
+  - [ locale-gen, "!!@Locale@!!" ]
+  - [ update-locale, "!!@Locale@!!" ]
   # documented keyboard option, but not implemented ?
   # change keyboard layout, src: https://askubuntu.com/a/784816
-  - [ sh, -c, sed -i 's/XKBLAYOUT=\"\w*"/XKBLAYOUT=\"'$($KeyboardLayout)'\"/g' /etc/default/keyboard ]
+  - [ sh, -c, sed -i 's/XKBLAYOUT=\"\w*"/XKBLAYOUT=\"'!!@KeyboardLayout@!!'\"/g' /etc/default/keyboard ]
+!!@AdditionalRuncmd@!!
 
 write_files:
   # hyperv-daemons package in mosts distros is missing this file and spamming syslog:
@@ -146,6 +138,11 @@ write_files:
       echo "Disabled"
       fi
     path: /usr/libexec/hypervkvpd/hv_get_dhcp_info
+  - content: |
+      {
+        "userland-proxy": false
+      }
+    path: /etc/docker/daemon.json
 !!@network_write_files@!!
 
 
@@ -153,7 +150,7 @@ manage_etc_hosts: true
 manage_resolv_conf: true
 
 resolv_conf:
-  nameservers: !!@NameServers@!!
+  nameservers: [!!@NameServers@!!]
   searchdomains:
     - !!@DomainName@!!
   domain: !!@DomainName@!!
