--- a/templates/v2.yaml.template
+++ b/templates/v2.yaml.template
@@ -1,17 +1,16 @@
- # values surrounded by !!@ @!! must be replaced with powerhell variables of the same name
-  - content: |
-      network:
-        version: 2
-        renderer: networkd
-        ethernets:
-          !!@NetInterface@!!:
-            dhcp4: no
-            addresses:
-              - !!@NetAddress@!!/24
-            nameservers:
-              search: !!@searchDomain@!!
-              addresses: !!@NameServers@!!
-            routes:
-              - to: default
-                via: !!@NetGateway@!!
-    path: /etc/netplan/99-static.yaml  
+# values surrounded by !!@ @!! must be replaced with powerhell variables of the same name
+version: 2
+renderer: networkd
+ethernets:
+  !!@NetInterface@!!:
+    dhcp4: no
+    addresses:
+      - !!@NetAddress@!!/!!@Netmaskbits@!!
+    nameservers:
+      search: [!!@searchDomain@!!]
+      addresses: [!!@NameServers@!!]
+    routes:
+      - to: default
+        via: !!@NetGateway@!!
+  
+
