--- a/templates/userdata-debdocker.yaml.template
+++ b/templates/userdata-debdocker.yaml.template
@@ -3,6 +3,9 @@
 # created: !!@createdDateStamp@!!
 # values surrounded by !!@ @!! need to be replaced by powershell variables of the same name
 
+# For debian docker, use this:
+# https://docs.docker.com/engine/install/debian/ 
+
 hostname: !!@VMHostname@!!
 fqdn: !!@FQDN@!!
 # cloud-init Bug 21.4.1: locale update prepends "LANG=" like in
@@ -84,6 +87,13 @@ runcmd:
   # # documented keyboard option, but not implemented ?
   # # change keyboard layout, src: https://askubuntu.com/a/784816
   # - [ sh, -c, sed -i 's/XKBLAYOUT=\"\w*"/XKBLAYOUT=\"'!!@KeyboardLayout@!!'\"/g' /etc/default/keyboard ]
+  # Debian Docker install from docker repo - to get current version
+  - 'install -m 0755 -d /etc/apt/keyrings'
+  - 'curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg'
+  - [ chmod, a+r, /etc/apt/keyrings/docker.gpg ]
+  - 'echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | tee /etc/apt/sources.list.d/docker.list'
+  - [ apt-get, update ]
+  - [ apt-get, install, docker-ce, docker-ce-cli, containerd.io, docker-buildx-plugin, docker-compose-plugin, -y]
 !!@AdditionalRuncmd@!!
 
 write_files:
